# jph-rd-quant-agent

./: .gitignore  Makefile  PLAN.md  README.md  pyproject.toml
data/: CLAUDE.md  adjust.py  build_store.py  config.yaml  fmp.py  make_factor_source.py  make_universe.py  refresh.py  sp500_tickers.txt
docs/: decisions.md
docs/reference/: notion-schema.md
execution/: CLAUDE.md  account_log.py  alpaca_client.py  breaker.paper.json  breaker.py  diff.py  ledger.py  limits.paper.json  order_gate.py  pred_refresh.py  promoted.py  rebalance.py  signal.py
ops/: CLAUDE.md  bootstrap_notion.py  check_onecli.sh  expose_traces.sh  flatten.py  health.sh  install_services.sh  rdq-data-refresh.service  rdq-data-refresh.timer  rdq-orchestrator.service  rdq-pred-refresh.service  rdq-pred-refresh.timer  rdq-rebalance.service  rdq-rebalance.timer  rdq-research.service  rdq-sweep.service  rdq-sweep.timer  reconcile.py  run_us_quant.sh  run_vanilla_factor.sh  runbook.md  setup_onecli.sh  sweep.py
orchestrator/: CLAUDE.md  app.py  approvals.py  config.py  config.yaml  conversation.py  llm.py  notion_client.py  notion_recorder.py  poller.py  promotion.py  prompts.py  rdagent_client.py  state.py  summary.py  universe.py
plans/project_init/: operator-runbook.md
research/: .env.example  CLAUDE.md  PINNED_COMMIT  install.sh  probe_llm.py  server_ui.py  us_quant.py  us_validation.py
research/us_templates/: README.md
research/us_templates/factor_template/: conf_baseline.yaml  conf_combined_factors.yaml
research/us_templates/model_template/: conf_baseline_factors_model.yaml  conf_sota_factors_model.yaml
scripts/ralph/: .last-branch  CLAUDE.md  prd.json  progress.txt  prompt.md
tasks/: prd-rdagent-q-trading.md  us-048-automated-pred-refresh.md
tests/: test_account_log.py  test_adjust.py  test_alpaca_client.py  test_approvals.py  test_bootstrap_notion.py  test_breaker.py  test_broker_tools.py  test_build_store.py  test_conversation.py  test_diff.py  test_flatten.py  test_fmp.py  test_health.py  test_ledger.py  test_llm.py  test_make_factor_source.py  test_make_universe.py  test_notion_client.py  test_notion_recorder.py  test_order_gate.py  test_poller.py  test_pred_refresh.py  test_probe_llm.py  test_promotion.py  test_rdagent_client.py  test_rdagent_pin.py  test_rebalance.py  test_reconcile.py  test_refresh.py  test_run_us_quant.py  test_run_vanilla_factor.py  test_scaffold.py  test_server_ui.py  test_services.py  test_signal.py  test_slack_app.py  test_state.py  test_summary.py  test_sweep.py  test_trading_halt.py  (+4 more)
(+2 files in other folders)
