[project]
name = "rd-agent-q"
version = "0.1.0"
description = "RD-Agent(Q) Slack-driven quant research and paper trading system"
requires-python = ">=3.10"
dependencies = [
    "slack-bolt>=1.20",
    "anthropic>=0.116",
    "requests>=2.31",
    "numpy>=1.26",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "pyqlib>=0.9.7",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["orchestrator*", "execution*", "research*", "data*", "ops*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyright>=1.1.390",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "live: tests that hit real external services through the OneCLI proxy (deselect with '-m \"not live\"')",
]

[tool.pyright]
include = ["orchestrator", "execution", "research", "data", "ops", "tests"]
# research/us_templates holds byte-identical upstream file copies (enforced by
# tests/test_us_templates.py) — never lint/typecheck or "fix" them.
exclude = ["**/__pycache__", ".venv", "research/us_templates"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
pythonVersion = "3.10"

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [".venv", "research/us_templates"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
